# AI-job-helper

./: .gitignore  README.md  pyproject.toml
docs/: design.md  run_agent_to_csv_flow.md
job_agent/: __init__.py  cli.py  config.py  constants.py  logging_utils.py  models.py
job_agent/agent/: __init__.py  executor.py  graph_runner.py  planner.py  reflector.py  reporting.py  runner.py  state.py
job_agent/parsers/: __init__.py  ashby.py  base.py  greenhouse.py  lever.py  registry.py
job_agent/services/: llm.py  normalize.py
job_agent/tools/: __init__.py  classify.py  dedupe.py  export.py  extract.py  fetch.py  search.py
scripts/: run_agent.py
tests/: test_classify.py  test_dedupe.py  test_parsers.py  test_planner.py  test_runtime_config.py
