[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-job-hunter"
version = "0.1.0"
description = "Agentic AI job collection system for AI Engineer campus hiring homework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.2",
  "langgraph>=0.2.60",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
llm = [
  "openai>=1.68.2",
]
dev = [
  "pytest>=8.3.4",
]

[tool.setuptools.packages.find]
include = ["job_agent*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
